feat(multiblock): 添加大型化工复合体多方块结构
- 新增大型化工复合体机器，支持化学和聚合反应配方
- 更新依赖库版本至gregtech-MeowmelMuku-1.12.2-2.9.0-190.jar
- 移除废弃的GCYMCopyRecipes类及相关调用- 调整大型切割机支持抛光配方，大型组装机支持层压配方
- 大型包装机现在同时支持打包和拆包配方
- Mega化学反应器增加聚合反应支持并更新前端纹理名称
- 电动聚爆压缩机改为使用原版配方映射- 删除不再使用的化学工厂覆盖渲染器定义
- 注册新机器的语言文件条目及描述
- 调整元数据实体注册顺序并分配新的ID- 移除电动聚爆配方映射定义- 更新模组版本号为1.9.0

--- a/src/main/resources/assets/gcym/lang/en_us.lang
+++ b/src/main/resources/assets/gcym/lang/en_us.lang
@@ -34,6 +34,7 @@ gcym.machine.mega_chemical_reactor.name=Mega Chemical Reactor
 gcym.machine.steam_engine.name=Industrial Steam Engine
 gcym.machine.steam_engine.tooltip.1=Produces up to %s§7 power.
 gcym.machine.large_circuit_assembler.name=Large Circuit Assembler
+gcym.machine.large_chemical_complex.name=Large Chemical Complex
 
 gcym.tooltip.ctrl=Press and hold CTRL to display the detailed recipe working logic
 gcym.tooltip.shift=Press and hold SHIFT to display the detailed threading logic
@@ -76,7 +77,7 @@ gcym.multiblock.mega_blast_furnace.description=A massive Electric Blast Furnace 
 gcym.multiblock.mega_vacuum_freezer.description=A massive Vacuum Freezer for extreme volume cooling.
 gcym.multiblock.steam_engine.description=A large Steam Engine for effective power production.
 gcym.multiblock.large_circuit_assembler.description=A multiblock Circuit Assembler for fabricating circuits.
-
+gcym.multiblock.large_chemical_complex.description=A multiblock chemical reactors for a variety of chemical reactions
 
 # hatches
 
@@ -145,7 +146,7 @@ tile.large_multiblock_casing.steam_casing.name=Industrial Steam Casing
 
 # RecipeMaps
 recipemap.alloy_blast_smelter.name=Alloy Blast Smelting
-recipemap.electric_implosion_recipes.name=Electric Implosion
+
 # Materials
 gcym.material.stellite_100=Stellite-100
 gcym.material.watertight_steel=Watertight Steel
